# example-actix-diesel-rust

./: Cargo.toml  diesel.toml
migrations/2025-02-24-143925_create_users/: up.sql
migrations/2025-03-01-021505_alter_user/: down.sql  up.sql
src/: db.rs  main.rs  model.rs  schema.rs
