[package]
name = "test-basic-http"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.218", features = ["derive"] }
diesel = { version = "2.1.0",  features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15.0"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
jsonwebtoken = "9.2.0"
chrono = "0.4.40"
once_cell = "1.20.3"
rand = { version = "0.9.0", features = ["alloc"] }
